# Handler-One-Bot

./: .dockerignore  .env.template  .gitignore  Dockerfile  GNUmakefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: RUNNER_SETUP.md  architecture.md
handler_bot/: __init__.py  agent.py  config.py  conversation.py  mcp_client.py  prompt.py
handler_discord/: __init__.py  bot.py  chunker.py  history.py
scripts/: run.py
scripts/launchd/: com.handler.bot.plist
